# Todolist

./: CMakeLists.txt  README.md  TodoList.desktop
assets/: resources.qrc
packaging/: com.von.TodoList.desktop.in  create-todo-list-servicemenu.desktop.in
scripts/: install-context-menu.sh  run-todolist.sh
src/: EditableLabel.cpp  EditableLabel.h  MainWindow.cpp  MainWindow.h  TodoItemWidget.cpp  TodoItemWidget.h  main.cpp
